sumo/tests/od2trips/errors/vm/vm_time_one_missing/errors.od2trips
Error: Broken period definition '0.00'.
Quitting (on error).
